+slider opacity animation / content-visibility fix

--- a/resources/frontend/css/_interface.sass
+++ b/resources/frontend/css/_interface.sass
@@ -347,6 +347,7 @@ a
         min-width: 100%
         z-index: 5
         overflow: hidden
+        transition: all .5s
         img
             width: 100%
             object-fit: contain
