--- a/resources/frontend/css/main.css
+++ b/resources/frontend/css/main.css
@@ -1101,6 +1101,8 @@ a:hover {
   min-width: 100%;
   z-index: 5;
   overflow: hidden;
+  -webkit-transition: all .5s;
+  transition: all .5s;
 }
 
 .slider .slider-row img {
